# DevOpsV2

./: Dockerfile  FuncA  FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  calculateTime.cpp  calculateTime.h  config.h  config.status  configure  configure.ac  configure~  funca_tests.cpp  http_server.cpp  load_server.cpp  load_server.h  main  main.cpp  simulateServerLoad  testFuncA  testFuncA.cpp  testHTTPserver.cpp  test_func_a  unitTest.cpp
.deps/: funca_tests.Po  http_server.Po  load_server.Po  testFuncA.Po  unitTest.Po
.github/workflows/: build.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  files  rules
debian/.debhelper/devopsv2/: dbgsym-build-ids
debian/.debhelper/devopsv2/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/devopsv2/dbgsym-root/usr/share/doc/: devopsv2-dbgsym
debian/devopsv2/DEBIAN/: control  md5sums
debian/devopsv2/usr/share/doc/devopsv2/: copyright
nginx/: nginx.conf  scriptA.sh  scriptB.sh
vertical_scaling/: nginx.conf  scriptA.sh  scriptB.sh
